<resources>
    <string name="app_name">Hotel Support</string>
    <string name="logOut">Log Out</string>
    <string name="logIn">Log In</string>
    <string name="userName">User name</string>
    <string name="hello">Hello:</string>
    <string name="email">Email:</string>
    <string name="departments">Departments:</string>
    <string name="passWord">Password</string>
    <string name="strNumner">Ticket ID:</string>
    <string name="strLastUpdated">Last updated:</string>
    <string name="strSubject">Subject:</string>
    <string name="strTopic">Topic:</string>
    <string name="strPriority">Priority:</string>
    <string name="strRefresh">Update data</string>
    <string name="strTicket">Ticket:</string>
    <string name="strUpdate">Update</string>
    <string name="strCancel">Cancel update</string>
    <string name="strStatus">Status:</string>
    <string name="strDepartment">Department:</string>
    <string name="strCreatedDate">Created Date:</string>
    <string name="strUser">User:</string>
    <string name="strEmail">Email:</string>
    <string name="strPhone">Phone:</string>
    <string name="strSource">Source:</string>
    <string name="strAssignedTo">Assigned To:</string>
    <string name="strSlaPlan">SLA Plan:</string>
    <string name="strDueDate">Due Date:</string>
    <string name="strHelpTopic">Help Topic:</string>
    <string name="strLastMessage">Last Message:</string>
    <string name="strLastResponse">Last Response:</string>
    <string name="strSearch">Search</string>
    <string name="strDetail">View detail ticket</string>
    <string name="strNote">Reply:</string>
    <string name="strReset">Reset</string>
    <string name="btnCancel">Cancel</string>
    <string name="strAssign">Assign</string>
    <string name="strTransfer">Transfer</string>
    <string name="chStatus">Status</string>
    <string name="reassign">Assign</string>
    <string name="strEdit">Edit</string>
    <string name="vietnamese">VietNamese</string>
    <string name="english">English</string>
    <string name="textview">Change language</string>
    <string name="chkRemember">Ghi nhớ đăng nhập</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_open">Open</string>
    <string name="tab_myticket">My Ticket</string>
    <string name="tab_overdue">Overdue</string>
    <string name="tab_closed">Closed</string>
    <string name="not_connection">Please check the network connection</string>
    <string name="connect_success">Logged in successfully</string>
    <string name="connect_errors">Login failed, please check again</string>
    <string name="processing">Processing...</string>
    <string name="blank">Username or password is empty. Please enter again!</string>
    <string name="assign_sucess">Assign sucess</string>
    <string name="assign_error">Assign error</string>
    <string name="duplicates_dep">Department duplicates please select again</string>
    <string name="please_choose">Please choose</string>
    <string name="strHotel">Hotel:</string>
    <string name="strRoom">Room:</string>
    <string name="call_recording">Call recording</string>
</resources>
