<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="5dp"
        android:background="#f0f0f0"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.68"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/hello"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/email"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/departments"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvHello"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="man.ha"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="man.ha@cloudteam.vn"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <TextView
                    android:id="@+id/tvDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="Housekeeping"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_horizontal"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogOut"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/effect_logout"
                android:gravity="center"
                android:text="@string/logOut"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="@dimen/btnSize" />


        </LinearLayout>

    </LinearLayout>

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="top" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </RelativeLayout>
    </TabHost>
</LinearLayout>